--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coronado-bridge",
   "version": "1.0.0",
-  "description": "Coronado is a simple general purpose router of all HTTP requests. It will wrap all RESTful calls from external systems and pass those JSON message into an outbound provider",
+  "description": "Coronado Bridge is a simple general purpose router of all HTTP requests. It will wrap all RESTful calls from external systems and pass those JSON message into a outbound provider.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
