--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.6",
-    "mocha": "^7.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "mocha": "^7.0.0",
+    "semantic-release": "^17.0.4",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.4"
   }
