--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
+      - run: npm run build
       - run:
           name: Release
           command: npx semantic-release
