--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Shane Mckenna",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "log4js": "^6.1.0"
   },
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.6",
+    "@types/cors": "^2.8.6",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^7.0.0",
