--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "log4js": "^6.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.15",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^13.13.45",
-    "chai": "^4.3.0",
+    "@types/chai": "^4.2.21",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.24",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.7.4",
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^7.2.0",
-    "semantic-release": "^17.4.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.9"
+    "mocha": "^9.1.0",
+    "semantic-release": "^17.4.7",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.3.5"
   },
   "publishConfig": {
     "access": "public"
