Major project update - candidate for release as v2. - Renamed the JS only examples for clarity. - Updated README and CONTRIBUTING pages. - Added more tests for more cases, including tests for new features - Revamped examples, more comments and more use cases presented, plus consistent naming, etc. - More documentation for IBridgeConfig to make it easier to use, along with explaining the new options requestTimeoutMs and corsOptions. - Added new bridge features:   - Support for custom connection timeout for a bridge instance.   - Support for CORS options in the Bridge Config to control specific CORS settings for an instance.   - BridgeError now supports an error name and extends Error.   - New class (which is exported) for a structured response that allows the bridge output handler to set the HTTP CODE, BODY and HEADERS for the response to the http client.   - Bridge now supports body with mime-types application/json (as before) but also text/plain. The client can control which parser is used by setting the content-type header in the request.   - Requests now pass in the REQUEST HEADERS into the Output Handler so that the callback can verify or perform actions based on those.   - The bridge now detects if it receives a BRIDGE ERROR from the output handler and if it does, it sets the HTTP STATUS code per that error.

--- a/examples/package.json
+++ b/examples/package.json
@@ -10,9 +10,10 @@
     "build:package": "cd .. && npx tsc",
     "build:examples": "tsc",
     "file": "node build/file.js",
-    "file-js": "node build/file-no-typescript.js",
+    "file-js": "node src/file-javascript-only.js",
     "custom-file": "node build/custom-file.js",
     "console": "node build/console.js",
+    "console-alternate": "node build/console-alternate.js",
     "error": "node build/error.js"
   },
   "author": "",
