--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "commonjs",
     "lib": ["es6", "dom"],
     "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
+    "outDir": "./build",
+    "rootDir": "./src",
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
