--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "connect-timeout": "^1.9.0",
     "log4js": "^6.1.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-serve-static-core": "^4.17.24",
+    "@types/connect-timeout": "^0.0.35",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.4",
     "chai": "^4.3.4",
@@ -34,7 +36,8 @@
     "mocha": "^9.1.0",
     "semantic-release": "^17.4.7",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "prettier": "^2.3.2"
   },
   "publishConfig": {
     "access": "public"
