--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "simple-mock": "^0.8.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
@@ -30,6 +31,7 @@
     "@types/express-serve-static-core": "^4.17.24",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.4",
+    "@types/simple-mock": "^0.8.2",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "log4js": "^6.7.0",
